# mclangc

./: .gitignore  Cargo.toml  test.mcl
mclang/: Cargo.toml
mclang-ast/: Cargo.toml
mclang-ast/src/: expression.rs  function.rs  lib.rs  literals.rs  ops.rs  statement.rs  tmp.rs
mclang-common/: Cargo.toml
mclang-common/src/: lib.rs  logger.rs  macros.rs
mclang-common/src/token/: delimeter.rs  keyword.rs  literal.rs  mod.rs  punctuation.rs
mclang-lexer/: Cargo.toml
mclang-lexer/src/: lib.rs
mclang-parser/: Cargo.toml
mclang-parser/src/: lib.rs  token.rs  util.rs
mclang/src/: args.rs  lib.rs  main.rs
src/: args.rs  main.rs
src-/parser/: grammar.pest  mod.rs
src/common/: logger.rs  mod.rs
src/common/token/: delimeter.rs  mod.rs  punctuation.rs
src/parser/: macros.rs
src/parser/ast/: attributes.rs  common.rs  mod.rs
src/tokeniser/: mod.rs
src/util/: logger.rs  mod.rs
