
[workspace]
resolver = "2"
members = [
    "mclang",
    "mclang-ast",
    "mclang-common",
    "mclang-lexer",
    "mclang-parser"
]


[workspace.dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
lazy_static = "1.4.0"
parse_int = "0.6.0"


# [dependencies]
# clap = { version = "4.4.6", features = ["derive"] }
# lazy_static = "1.4.0"
# parse_int = "0.6.0"
