[package]
name = "mclang"
version = "0.1.0"
edition = "2021"

[lib]
name = "mclang"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
lazy_static = { workspace = true }
parse_int = { workspace = true }
anyhow = { workspace = true }
